--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: #111;
+    background: rgba(17, 17, 17, 0);
     color: #fff;
     z-index: 2;
     transition: 0.5s;
@@ -56,7 +56,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.39);
+    background-color: rgba(0, 0, 0, 0.664);
 }
 
 .text {
@@ -138,6 +138,13 @@
 
 .social li a:hover {
     transform: scale(0.5) translateY(-15px);
+}
+
+body {
+    background-image: url('1992.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 @font-face {
