--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.664);
+    background-color: rgba(0, 0, 0, 0.548);
 }
 
 .text {
@@ -75,23 +75,25 @@
     font-weight: 750;
     line-height: 1em;
     text-transform: uppercase;
-    color: rgb(0, 255, 106);
+    color: rgb(248, 91, 91);
 }
 
 .text h3 {
     font-family: "Outer Sans O", serif;
     font-size: 4em;
-    font-weight: 650;
+    font-weight: 500;
     line-height: 1em;
     text-transform: uppercase;
-    color: rgb(0, 255, 106);
+    color: rgb(157, 230, 240);
 }
 
 .text p {
-    font-family: "Outer Sans", serif;
+    font-family: "Outer Sans O", serif;
     font-size: 1.5em;
     margin: 20px 0;
     font-weight: 350;
+    line-height: 1em;
+    text-transform: uppercase;
     max-width: 700px;
 }
 
@@ -141,7 +143,7 @@
 }
 
 body {
-    background-image: url('1992.jpg');
+    background-image: url('1992-feb.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
