--- a/style.css
+++ b/style.css
@@ -65,35 +65,36 @@
 }
 
 .text h1 {
-    font-family: "Montserrat", serif;
-    font-size: 3.5em;
+    font-family: "Promdate", serif;
+    font-size: 4.1em;
+    color: rgb(219, 181, 100);
 }
 
 .text h2 {
     font-family: "Montserrat", serif;
-    font-size: 4em;
+    font-size: 2.8em;
     font-weight: 750;
     line-height: 1em;
-    text-transform: uppercase;
-    color: rgb(248, 91, 91);
+    text-transform: none;
+    color: rgb(182, 182, 182);
 }
 
 .text h3 {
-    font-family: "Outer Sans O", serif;
-    font-size: 4em;
+    font-family: "Montserrat", serif;
+    font-size: 2.8em;
     font-weight: 500;
     line-height: 1em;
-    text-transform: uppercase;
+    text-transform: none;
     color: rgb(157, 230, 240);
 }
 
 .text p {
-    font-family: "Outer Sans O", serif;
+    font-family: "Montserrat", serif;
     font-size: 1.5em;
     margin: 20px 0;
     font-weight: 350;
     line-height: 1em;
-    text-transform: uppercase;
+    text-transform: none;
     max-width: 700px;
 }
 
@@ -108,7 +109,7 @@
     text-decoration: none;
     color: rgb(255, 255, 255);
     margin-top: 10px;
-    text-transform: uppercase;
+    text-transform: none;
     letter-spacing: 2px;
     transition: 0.2s;
 }
@@ -150,8 +151,8 @@ body {
 }
 
 @font-face {
-    font-family: 'Montserrat';
-    src: url('Montserrat-Regular.ttf')
+    font-family: 'Promdate';
+    src: url('promdate-regular_bigfontsite.com.ttf')
         format('truetype');
 }
 
